--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/041/b/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/041/b/index.xhtml
@@ -22,7 +22,7 @@
             <div style="width: 500px">
                 <!--B1_1 新たに作成する履歴-->
                 <div id="B1_1" class="label">#{i18n.getText('QMM041_19')}</div>
-                <div class="flex valign-center control-group">
+                <div class="flex valign-center control-group" style="margin-left: 10px">
                     <!--B1_2 期間-->
                     <div id="B1_2" data-bind="ntsFormLabel: {required: true}">
                         #{i18n.getText('QMM041_16')}
@@ -31,7 +31,7 @@
                     <div tabindex="1"
                          id="B1_4"
                          data-bind="ntsDatePicker: {
-                             value: startYm,
+                             value: startYearMonth,
                              dateFormat: 'yearmonth',
                              required: true,
                              name : '#[QMM041_16]' }"/>
@@ -39,21 +39,23 @@
                     <div id="B1_5"> ～ 9999/12</div>
                 </div>
 
-                <div class="flex valign-top control-group">
+                <div class="flex valign-top control-group" style="margin-left: 10px">
                     <!--B1_6 履歴の引継ぎ-->
                     <div id="B1_6" data-bind="ntsFormLabel: {required: false}">
                         #{i18n.getText('QMM041_21')}
                     </div>
                     <!--B1_7 履歴の引継ぎ-->
-                    <div tabindex="2"
-                         id="B1_7"
-                         data-bind="ntsRadioBoxGroup: {
+                    <div class="B1_7">
+                        <div tabindex="2"
+                             id="B1_7"
+                             data-bind="ntsRadioBoxGroup: {
                                 name:'#[#QMM041_22]',
                                 options: takeOverItem,
                                 optionsValue: 'value',
                                 optionsText: 'name',
                                 value: takeOverMethod
                          }"/>
+                    </div>
                 </div>
             </div>
         </div>
