--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/041/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/041/d/index.xhtml
@@ -76,13 +76,7 @@
                         dataSource: items,
                         rows: 10,
                         primaryKey: 'code',
-                        columns: [
-                            {key:'empId', length: 0, hidden: true},
-                            {headerText: '#{i18n.getText('QMM041_8')}', key: 'code', width: 70},
-                            {headerText: '#{i18n.getText('QMM041_9')}', key: 'name', width: 120},
-                            {headerText: '#{i18n.getText('QMM041_16')}', key: 'period', width: 160},
-                            {headerText: '#{i18n.getText('QMM041_18')}', key: 'amount', width: 130}
-                        ],
+                        columns: columns,
                         optionsValue: 'code',
                         optionsText: 'name',
                         multiple: false,
