--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/g/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/g/index.xhtml
@@ -15,7 +15,7 @@
         </div>
 
     <div style="margin-top: 15px;" class="contents-area fixed-flex-layout">
-        <div class="fixed-flex-layout-left" style="margin-left: 20px">
+        <div class="fixed-flex-layout-left" style="margin-left: 20px;margin-right: 10px;">
             <div data-bind="ntsPanel:{width: '200px', height: '300px', direction: 'right', showIcon: false, visible: true}">
                 <div>
                     <button id="G1_3" data-bind="click: openJScreen, timeClick: 800, enable: !enableNew()">#{i18n.getText('QMM020_13')}</button>
