[QMM020] Fix bug #126257

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/cmm/015/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/cmm/015/a/index.xhtml
@@ -9,9 +9,9 @@
     <ui:define name="htmlHead">
         <script>var dialogSize = {width: 300, height: 200};</script>
         <com:ValidatorScript>
-            nts.uk.ctx.pr.core.dom.wageprovision.organizationinformation.salaryclassification.salaryclassificationmaster.SalaryClassificationCode
-            nts.uk.ctx.pr.core.dom.wageprovision.organizationinformation.salaryclassification.salaryclassificationmaster.SalaryClassificationName
-            nts.uk.ctx.pr.core.dom.wageprovision.organizationinformation.salaryclassification.salaryclassificationmaster.Memo
+            nts.uk.ctx.pr.core.dom.wageprovision.organizationinfor.salarycls.salaryclsmaster.SalaryClassificationCode
+            nts.uk.ctx.pr.core.dom.wageprovision.organizationinfor.salarycls.salaryclsmaster.SalaryClassificationName
+            nts.uk.ctx.pr.core.dom.wageprovision.organizationinfor.salarycls.salaryclsmaster.Memo
         </com:ValidatorScript>
         <com:stylefile path="cmm015.a.main.css"/>
         <com:scriptfile set="IGNITE"/>
