--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/001/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/001/a/index.xhtml
@@ -42,7 +42,7 @@
 							showIcon: true,
 							visible: true}">
 
-					<!-- thanh tìm kiếm  -->
+
 					<div  id="A2_2" tabindex="4"
 						 data-bind="ntsSearchBox: {
 								searchMode: 'highlight',
@@ -72,12 +72,12 @@
 					</table>
 					<!-- arrow -->
 					<span id="caret" class="caret-bottom inline"></span>
-					<!-- khu vực thêm lịch sử, sửa lịch sử  -->
+
 					<div id="history" class="cf">
 						<button tabindex="6" id="A2_9"
-								data-bind="click: openDialogB, enable: isOpenDialogB()">#{i18n.getText('QMM001_10')}</button>
+								data-bind="click: openDialogB, enable: isOpenDialogB(), timeClick: 600">#{i18n.getText('QMM001_10')}</button>
 						<button style="float: right" tabindex="7" id="A2_10" class="danger"
-								data-bind="click: openDialogC, enable: isOpenDiaLogC() ">#{i18n.getText('QMM001_11')}</button>
+								data-bind="click: openDialogC, enable: isOpenDiaLogC(), timeClick: 600 ">#{i18n.getText('QMM001_11')}</button>
 					</div>
 					<!-- History place -->
 					<div id="history_lst" tabindex="8"
