--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/007/share/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/007/share/index.xhtml
@@ -329,7 +329,7 @@
 			</div>
 		</div>
 		<!--A10 休日に関して-->
-		<div class="valign-center control-group-kaf007" data-bind="visible:$parent.screenModeNew()">
+		<div class="valign-center control-group-kaf007" data-bind="visible:$parent.showExcludeHoliday()">
 			<div class="table">
 				<div class="cell valign-center">
 					<div class="lblTitle-kaf007"
