--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/g/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/g/index.xhtml
@@ -24,9 +24,10 @@
                         rows: 15,
                         name: '#[QMM016_56]',
                         options: statementItemNameList,
-                        optionsValue: 'name',
+                        optionsValue: 'code',
                         columns: [
-                            { headerText: '#{i18n.getText('QMM016_57')}', key: 'name', width: 220, formatter: _.escape}
+                            { headerText: '', key: 'code', hidden: true, formatter: _.escape},
+                            { headerText: '#{i18n.getText('QMM016_57')}', key: 'dispname', width: 220, formatter: _.escape}
                         ],
                         multiple: false,
                         value: selectedStatementItemName
@@ -35,7 +36,7 @@
         </div>
         <div id="functions-area-bottom">
             <button tabindex="2" class="x-large proceed "
-                    data-bind="click: decideSelect, enable: statementItemNameList().length > 0">#{i18n.getText('QMM016_54')}</button>
+                    data-bind="click: decideSelect, enable: selectedStatementItemName().length > 0">#{i18n.getText('QMM016_54')}</button>
             <button tabindex="3" class="large" data-bind="click: cancelSelect">#{i18n.getText('QMM016_55')}</button>
         </div>
     </ui:define>
