--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/c/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/c/index.xhtml
@@ -27,7 +27,7 @@
                 <col width="300px" />
             </colgroup>
             <thead>
-                <tr data-bind = "with: basicCalculationFormulaList()[0]">
+                <tr data-bind = "with: masterBasicCalculationFormula">
                     <th class = "ui-widget-header">
                         <span style="white-space: pre-line">#{i18n.getText('QMM017_30')}</span>
                         </th>
@@ -83,8 +83,8 @@
                 </tr>
                 </thead>
                 <tbody data-bind="foreach: basicCalculationFormulaList">
-                <tr data-bind = "visible: $index() > 0">
-                    <td data-bind="text: masterUseCode"></td>
+                <tr>
+                    <td data-bind="text: masterUseName"></td>
                     <td>
                         <!--C3_6-->
                         <div class="cf" tabindex="6" data-bind="ntsSwitchButton: {
@@ -109,7 +109,7 @@
                         </div>
                         <div data-bind = "visible: calculationFormulaClassification() == 1">
                             <!--C3_11-->
-                            <button data-bind = "function($index){click: $vm.doConfiguration($index)}" tabindex="8">#{i18n.getText('QMM017_34')}</button>
+                            <button data-bind = "click: function(){$vm.doConfiguration($index())}" tabindex="8">#{i18n.getText('QMM017_34')}</button>
                             <!--C3_12-->
                             <div style = "display: inline-block" data-bind = "text: displayFormulaType"></div>
                         </div>
