update CCG022 UI

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/022/a/ccg022.a.main.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/022/a/ccg022.a.main.css
@@ -5,8 +5,9 @@
 }
 
 #group-mode {
-	width: calc(100% - 90px);
+	width: 630px;
 	margin-left: 25px;
+	height: 680px;
 }
 
 #group-mode .ntsRadioBox {
