--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/common/error/common.error.style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/common/error/common.error.style.css
@@ -7,3 +7,9 @@
 	margin-top: 50px;
 	margin-bottom: 50px;
 }
+
+#stop-use-message {
+	font-size: 17pt;
+	margin-top: 50px;
+	margin-bottom: 50px;
+}
