--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/004/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/004/a/index.xhtml
@@ -91,8 +91,8 @@
 						<tr>
 							<td>
 								<!-- A3_001 -->
-								<div
-									data-bind="ntsFormLabel: {required: true}">#{i18n.getText('CAS004_13')}</div>
+								<div 
+									data-bind="ntsFormLabel: {required: true, constraint: 'LoginID'}">#{i18n.getText('CAS004_13')}</div>
 							</td>
 							<td>
 								<!-- A3_002 --> <input id="login-id" tabindex="7" class="input-lead"
@@ -110,7 +110,7 @@
 							<td>
 								<!-- A3_005 -->
 								<div
-									data-bind="ntsFormLabel: {required: true}">#{i18n.getText('CAS004_14')}</div>
+									data-bind="ntsFormLabel: {required: true, constraint: 'UserName'}">#{i18n.getText('CAS004_14')}</div>
 							</td>
 							<td>
 								<!-- A3_006 --> <input id="username-input" tabindex="9" class="input-lead"
@@ -121,7 +121,7 @@
 							<td style="padding-top: 25px;">
 								<!-- A3_007 -->
 								<div
-									data-bind="ntsFormLabel: {required: false}">#{i18n.getText('CAS004_17')}</div>
+									data-bind="ntsFormLabel: {required: false, constraint: 'MailAddress'}">#{i18n.getText('CAS004_17')}</div>
 							</td>
 							<td colspan="2" style="padding-top: 25px;">
 								<!-- A3_008  --> <input id="mailaddress-input" tabindex="10" class="input-email"
@@ -132,7 +132,7 @@
 							<td>
 								<!-- A3_009 -->
 								<div
-									data-bind="ntsFormLabel: {required: true}">#{i18n.getText('CAS004_18')}</div>
+									data-bind="ntsFormLabel: {required: true, constraint: 'RawPassword'}">#{i18n.getText('CAS004_18')}</div>
 							</td>
 							<td>
 								<!-- A3_010 --> <input tabindex="11" class="input-lead"
