--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/004/b/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/004/b/index.xhtml
@@ -18,7 +18,7 @@
 		<ui:define name="content">
 			<div id="functions-area-bottom">
 				<!-- B1_009 -->
-				<button class="proceed large" tabindex="4"
+				<button class="proceed x-large" tabindex="4"
 					data-bind="click: decision">#{i18n.getText('CAS004_25')}</button>
 				<!-- B1_010 -->
 				<button tabindex="5" data-bind="click: closeDialog">#{i18n.getText('CAS004_26')}</button>
