qmm017 update coding screen d

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/a/qmm017.a.style.css
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/a/qmm017.a.style.css
@@ -68,12 +68,12 @@
 }
 .tab-panel-col-1 {
     display: inline-block;
-    width: 215px;
+    width: 220px;
     vertical-align: top;
     margin-top: 50px;
 }
 .tab-panel-col-2 {
-   width: 210px;
+   width: 220px;
     display: inline-block;
     margin-left: 5px;
 }
@@ -82,7 +82,7 @@
     height: 290px;
     vertical-align: top;
     display: inline-block;
-    margin-left: 20px;
+    margin-left: 15px;
 }
 .cal-container {
     vertical-align: top;
@@ -91,4 +91,8 @@
 .cal-container button {
     height: 30px;
     width: 30px;
+}
+.search-box-sm {
+    margin-left: 40px;
+    width: 75px;
 }
