--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/c/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/c/index.xhtml
@@ -74,7 +74,7 @@
                 <thead>
                 <tr>
                     <th class = "ui-widget-header" >
-                        UNKNOWN
+                        <div data-bind = "text: $vm.basicFormulaSetting().branchCondition"></div>
                     </th>
                     <th colspan="2" class = "ui-widget-header">
                         <button tabindex="4" data-bind = "click: $vm.setAllFixedValue">#{i18n.getText('QMM017_34')}</button>
