#fix bug kdw006

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/007/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/007/a/index.xhtml
@@ -308,9 +308,9 @@
 		                            	<td>
 		                            		<span>#{i18n.getText('KDW007_66')}</span>
 		                            	</td>
-		                            	<td>
+		                             	<td>
 		                            		<div data-bind="ntsFormLabel: {}">#{i18n.getText('KDW007_67')}</div>
-		                            		<div data-bind="ntsRadioBoxGroup: {
+		                            		<div data-bind="ntsSwitchButton: {
 												options: enumLogicalOperator,
 												optionsValue: 'code',
 												optionsText: 'name',
