--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/013/k/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/013/k/index.xhtml
@@ -38,7 +38,7 @@
 			<div>
 				<table id="table">
 					<tr>
-						<td><div id="lb_systemSelection" data-bind="ntsFormLabel: {}">#{i18n.getText('CCG013_47')}</div></td>
+						<td><div id="lb_systemSelection" data-bind="ntsFormLabel: {required: true}">#{i18n.getText('CCG013_47')}</div></td>
 						<td><div id="combo-box" tabindex="1" style="width: 160px"
 								data-bind="ntsComboBox: {
 																name: '#[CCG013_24]',
