--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/013/d/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/013/d/index.xhtml
@@ -27,7 +27,7 @@
 
 				<div class="functions-area-content">
 					<div class="top-left-contents">
-						<div data-bind="ntsFormLabel: {}">#{i18n.getText('CCG013_47')}</div>
+						<div data-bind="ntsFormLabel: {required: true}">#{i18n.getText('CCG013_47')}</div>
 						<div id="combo-box" tabindex="1" class="cbb-system-data"
 							data-bind="ntsComboBox: {
 							options: systemList,
