CCG015 ThanhPV fix bug: 98935

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/015/a/ccg015.a.style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/015/a/ccg015.a.style.css
@@ -145,6 +145,11 @@ button.nts-switch-button {
 .drop_links {
 	max-height: 50px;
 	margin-left: 270px;
+    color: #0D86D1;
+}
+
+.drop_links .function-header{
+	background-color: #E0F59E;
 }
 
 .float_left {
