CCG015 ThanhPV fix bug: 98964

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/015/b/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/015/b/index.xhtml
@@ -80,7 +80,7 @@
 						enable: true }"></div>
 					<div>
 						<table tabindex ="4" id="standarWidget-list" data-bind="ntsGridList: {	
-								showNumbering: true,							
+								showNumbering: false,							
 								height: 350,
 								dataSource: settingItems,
 								primaryKey: 'itemCode',
@@ -107,7 +107,7 @@
 						enable: true }"></div>
 					<div>
 						<table tabindex ="4" id="optionalWidget-list" data-bind="ntsGridList: {	
-								showNumbering: true,							
+								showNumbering: false,							
 								height: 350,
 								dataSource: settingItems,
 								primaryKey: 'itemCode',
@@ -134,7 +134,7 @@
 						enable: true }"></div>
 					<div>
 						<table tabindex ="6" id="dashboard-list" data-bind="ntsGridList: {	
-								showNumbering: true,							
+								showNumbering: false,							
 								height: 350,
 								dataSource: settingItems,
 								primaryKey: 'itemCode',
@@ -161,7 +161,7 @@
 						enable: true }"></div>
 					<div>
 						<table tabindex ="8" id="flow-list" data-bind="ntsGridList: {	
-								showNumbering: true,							
+								showNumbering: false,							
 								height: 350,
 								dataSource: settingItems,
 								primaryKey: 'itemCode',
